fixed main info on small screen

--- a/frontend/src/app/landing/landing.component.sass
+++ b/frontend/src/app/landing/landing.component.sass
@@ -1,5 +1,4 @@
 *
-  border: 1px solid black
   font-family: helvetica, sans-serif
 
 
@@ -22,15 +21,12 @@
     margin: 0px
     text-transform: uppercase
     font-size: 1.2em
-    border: 1px solid red
-
 
 #nav
   position: absolute
   right: 0
   top: -15px
   height: 8vh
-  border: 1px solid green
   ul li
     float: left
     list-style: none
@@ -80,17 +76,14 @@
   h1
     margin-top: 2px
 
-  .picture,
-  .picture2,
-  .picture3
+  .picture
     background-size: cover
   
-  .picture
+  .pict1
     background: url(https://newrelic.com/content/dam/component-assets/homepage/hp01/hp01-screenshot1.jpg) no-repeat
-  .picture2
-    background: url(https://newrelic.com/content/dam/component-assets/homepage/hp01/hp01-screenshot2.jpg) no-repeat
-
-  .picture3
+  .pict2
+    background: url(https://newrelic.com/content/dam/component-assets/homepage/hp01/hp01-screenshot2.jpg) no-repeat center
+  .pict3
     background: url(https://newrelic.com/content/dam/component-assets/homepage/hp01/hp01-screenshot3.jpg) no-repeat
 
 @media (max-width: 599px)
@@ -135,9 +128,28 @@
 
 @media (max-width: 730px)
   .content
-    height: 100vh
-    h1
-      font-size: 14px
+    img
+      width: 5vh
+    font-size: 2vh
+    height: 80vh
+    width: 90vw
+    margin-top: 10vh
+    margin-left: 3vw
+    margin-right: 3vw
+    padding: 0
+    -webkit-box-shadow: 3px 4px 31px -5px rgba(0,0,0,0.75)
+    -moz-box-shadow: 3px 4px 31px -5px rgba(0,0,0,0.75)
+    box-shadow: 3px 4px 31px -5px rgba(0,0,0,0.75)
+    .infoContent.left,
+    .infoContent.right
+      height: 25vh
+      margin: 0
+      padding: 0
+      float: none
+  .picture
+    height: 50vh
+    padding: 0
+
 
 
   
